# AssetsUp

./: .gitignore  BRANCH_MODULE_IMPLEMENTATION_SUMMARY.md  PR_APPROVAL_ENGINE_MODULE.md  PR_CUSTOM_FIELDS_MODULE.md  RBAC_IMPLEMENTATION_SUMMARY.md  docker-compose.yml  package-lock.json  package.json  readme.md
backend/: .env  .env.example  .gitignore  Dockerfile  package-lock.json  package.json  readme.md
contract/: README.md  Scarb.toml
contracts/: .gitignore  Cargo.toml  README.md
contracts/.github/workflows/: CI.yaml
contracts/assetsup/: Cargo.toml
contracts/assetsup/src/: asset.rs  branch.rs  error.rs  errors.rs  lib.rs  types.rs
contracts/assetsup/src/tests/: asset.rs  branch.rs  initialize.rs  mod.rs  tokenize.rs  types.rs
contracts/assetsup/test_snapshots/tests/asset/: test_register_and_get_asset_success.1.json  test_register_asset_duplicate.1.json
contracts/assetsup/test_snapshots/tests/branch/: test_add_asset_to_branch.1.json  test_add_duplicate_asset_to_branch.1.json  test_create_branch.1.json  test_create_branch_duplicate.1.json  test_create_branch_empty_name.1.json  test_get_branch_assets_multiple.1.json  test_get_branch_nonexistent.1.json
contracts/assetsup/test_snapshots/tests/tokenize/: test_tokenize_asset_success.1.json  test_tokenize_asset_without_admin_initialized.1.json
contracts/assetsup_contract/: Cargo.toml
contracts/assetsup_contract/src/: lib.rs
contracts/assetsup_contract/src/tests/: initialize.rs
contracts/src/: lib.rs
frontend/: .gitignore  Dockerfile  jest.config.ts  middleware.ts  next.config.js  package-lock.json  (+1 more)
(+915 files in other folders)
